--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "lamassu-dash",
-  "version": "0.1.0",
-  "description": "Lamassu Dash Plugin",
+  "name": "lamassu-poloniex",
+  "version": "0.1.1",
+  "description": "Lamassu Poloniex Plugin",
   "main": "main.js",
   "scripts": {
     "test": "mocha"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/deginner/lamassu-dash.git"
+    "url": "https://github.com/deginner/lamassu-poloniex.git"
   },
   "keywords": [
     "Dash",
+    "Poloniex",
     "Lamassu",
     "Plugin"
   ],
@@ -19,7 +20,7 @@
     "setup": "./setup"
   },
   "bugs": {
-    "url": "https://github.com/deginner/lamassu-dash/issues"
+    "url": "https://github.com/deginner/lamassu-poloniex/issues"
   },
   "devDependencies": {
     "chai": "^3.5.0",
